# ChangeLog for media-radio/ax25-apps
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-apps/ChangeLog,v 1.28 2014/12/19 07:27:44 jer Exp $

  19 Dec 2014; Jeroen Roovers <jer@gentoo.org> ax25-apps-0.0.8_rc4.ebuild,
  files/ax25-apps-0.8.4-tinfo.patch:
  Run eautoreconf after patching configure.ac (bug #532988 by Toralf Förster).

  23 Nov 2014; Thomas Beierlein <tomjbe@gentoo.org> ax25-apps-0.0.8_rc4.ebuild,
  +files/ax25-apps-0.8.4-tinfo.patch:
  Fix missing dep on tinfo (bug #529776). Thanks Diego

  25 Dec 2013; Thomas Beierlein <tomjbe@gentoo.org> -ax25-apps-0.0.6-r1.ebuild,
  -ax25-apps-0.0.8_rc2.ebuild, -ax25-apps-0.0.8_rc3.ebuild,
  -files/ax25-apps-0.0.6-cflags.patch:
  Drop old

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ax25-apps-0.0.8_rc4.ebuild:
  Stable for x86, wrt bug #482110

  26 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ax25-apps-0.0.8_rc4.ebuild:
  Stable for ppc, wrt bug #482110

  23 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ax25-apps-0.0.8_rc4.ebuild:
  Stable for amd64, wrt bug #482110

*ax25-apps-0.0.8_rc4 (19 Jun 2013)

  19 Jun 2013; Thomas Beierlein <tomjbe@gentoo.org>
  +ax25-apps-0.0.8_rc4.ebuild:
  Version bump

*ax25-apps-0.0.8_rc3 (09 Jun 2013)

  09 Jun 2013; Thomas Beierlein <tomjbe@gentoo.org>
  +ax25-apps-0.0.8_rc3.ebuild:
  Version bump

  11 Nov 2012; Thomas Beierlein <tomjbe@gentoo.org> ax25-apps-0.0.6-r1.ebuild,
  +files/ax25-apps-0.0.6-cflags.patch:
  Fix ignored CFLAGS (bug #442762). Thanks Diego.

  11 Nov 2012; Thomas Beierlein <tomjbe@gentoo.org> ax25-apps-0.0.8_rc2.ebuild:
  Fix dependency

  04 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> -files/ax25rtd.blank,
  ax25-apps-0.0.6-r1.ebuild:
  Backport last change from 0.0.8_rc2 in order to get ax25-apps out from
  the list, http://qa-reports.gentoo.org/output/find-binary-files.txt

  22 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  ax25-apps-0.0.8_rc2.ebuild: