@@ -6,13 +6,13 @@ AUX ax25ipd.rc 493 SHA256 f3fcc66e2620575651fc6b39dbc0e2247839b79713bb94fcc0b4b2
 AUX ax25mond.rc 498 SHA256 9d6704bbc6bbe255fe6bacd825369e354b6766172cb73a6e12829999cd4dbe2d SHA512 e14a077dd76e05cbbf5338bb68b8d81268aec2c4538e0dc55896e77e0ff9b6001e311d22650c94f50cb319a6e446b6a89253b29b38e458bb2371391d52a75ebe WHIRLPOOL fb3411465759ab54d284969b11ae055b931a294ce85efad48a46a0aa27e7347856e9d3cbd2dccab5a4f52060c9c3b87184a8d8eff1205a63c0a397eb36b61131
 AUX ax25rtd.rc 493 SHA256 f4cb31093a70bdef47abe4d4ba891ec2eedaae39982a3e6bbdd6020615d95204 SHA512 0e3f2b435851e8a6238fb4a1727c1ee3666099a2d5ce9768929c8bd8ffd006249cdd0ad6be795a5aa16f260a15c43d03ac999c0c6325ed1c251e43de2b97e9ca WHIRLPOOL 6ec4456700a8b7d2822f0a774512af78f405ac9df7dc35dfaa65cf304910b7f1c072d85defb39e89f522e427d42d759ac46495750b4df0c3fbdbbee39d8cb1b4
 DIST ax25-apps-0.0.8-rc4.tar.gz 442172 SHA256 0e031721a440cc169768080f1d6bea32ef1d2a9c80a754ae5239738f9ab8fe0a SHA512 c99b553c5cadb0e389c1cb35e79fea61b628c76f5ef35c35876e492afc7ab796f8781c3ab5987a096f0816389e9772274fe54e88c16fca0fd30013da3d74d38b WHIRLPOOL 0402f5d149642ed479a260a64c091bcd4a797a53e5ac2df239fd3e5d38821c5fe0cbacffe7c2d7ebeb614bc455805269eb415fb73315fd830da9c05310152d8f
-EBUILD ax25-apps-0.0.8_rc4.ebuild 1177 SHA256 fc4a9a67c6cfadda4e68317b8719751033774e3e2f3d99ad42b7b684ed62a1b7 SHA512 b1ab8b7f07eaf54d080d076aad65faea0cb56ca7783d46cd50e31c63f1e043d399875c277df43db253baf25bc45df77b8aaa8b5c5b85f104d2e8fade8f793d17 WHIRLPOOL 9658ede651cf8f2ad6e0aaa2a018612163e6bdab175aa232b79031a35e8ec686fd33903545af0d6af8c6b91ade0aa6b725005fcea5dc3e91ec91717f23f5b5c0
-MISC ChangeLog 3860 SHA256 27084b5a72813d5d6978b5a04b595e551d39215f93016b710eb935796747f435 SHA512 f027113799bf222ff1478ba5db3e925e39b84d825406b72760e9685c06448205b24752c730996fbff7f07c689af0d262f82f06cc19114f489cf6af73ce9a2616 WHIRLPOOL 4655d11113dee5d270ac77ea0cdf232cae9c6f45bc3327174edad3d832d198fbe7d036ec8a1c69d5e32b629992b450fc1f74f649f54d829afb905c7ee7ba8e85
+EBUILD ax25-apps-0.0.8_rc4.ebuild 1198 SHA256 d9b6696c932957fb5e07e10ac703b492884c86636fe682e3ec72a9711e7626f6 SHA512 f19d889426d15b050cd702f00a45b1b8a0f05824bbd2d4ad057ed4e11e979cafccc8fd25e3efc20e74354a3723c046525cb412181059d927e30df4e418e406ea WHIRLPOOL 673f330e514763ee3644ecc06aa32c081eeaee027516cc1d6e2db58f0d47c09d0d0ce1cf0daa518af3bc5d8f5ec03a2231e598885469549943b2723b3a3b41f4
+MISC ChangeLog 3992 SHA256 1ee12aa0e2e4b56b54fbad0300f33437035210c8f004e81b238741cb8f711d28 SHA512 beeb9931ff090ae117dd27ec4bdd658c4a52dc6a9625e33c1a0b34fabcb43e3f9b4de84f24dd7578b15bf1f18104c8309e0c593083dc7526ce0280ef501881f6 WHIRLPOOL 660858c9eaafb8b27f0d872de45e98700e360e923270be2aa9dde84bfa1e79c62dacf840fc63010b63d3b0a71b1068b8eb52880eb69e77dff3097943d0dcfdde
 MISC metadata.xml 241 SHA256 865a729cb9a1d82ea72849efc0d66c4c499e1c87b59757996f3d45bae77df6cc SHA512 eff33b80d9c4469f6f71c50b6cd7d173d7670c28f7e4162c3be23fdd5b4adacf3f0365ebe0827cd1721f24cc5a40440ae1edd78f59e606648e951bbb10378f2d WHIRLPOOL c248807b5f958ae6b54ed780eef3c255eff1c65f5afdf77fa64c4fd0a51cbeeeeef25e1d5ad550c748ba75bd2f1523d0f8d2d71bcf966306d010751c5ace5e4f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlST03IACgkQVWmRsqeSphMZsgCfVL0gMdVgzRYlbKRSecsCtHZe
-Qj8An1np3Gvv+paZw7dSFOTB4vVLnCM7
-=75iR
+iEYEAREIAAYFAlTGnnAACgkQQe4uqXYgU9WGbgCfUVIvkrpmpFnMcL3m7E2yCac+
+AvwAoK9d5mCIVhqa6+2f2c2h3+o4h1/E
+=t38x
 -----END PGP SIGNATURE-----
