@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-apps/ax25-apps-0.0.8_rc4.ebuild,v 1.6 2014/12/19 07:27:44 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-apps/ax25-apps-0.0.8_rc4.ebuild,v 1.7 2015/01/26 20:06:53 tomjbe Exp $
 
 EAPI=5
 inherit autotools eutils
@@ -20,7 +20,8 @@ RDEPEND=">=dev-libs/libax25-0.0.12_rc2
 	sys-libs/ncurses"
 DEPEND="${RDEPEND}
 	virtual/pkgconfig
-	!media-sound/listen"
+	!media-sound/listen
+	!dev-ruby/listen"
 
 S=${WORKDIR}/${MY_P}
 
