@@ -1,5 +1,5 @@
 DEFINED_PHASES=install prepare
-DEPEND=>=dev-libs/libax25-0.0.12_rc2 sys-libs/ncurses virtual/pkgconfig !media-sound/listen !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DEPEND=>=dev-libs/libax25-0.0.12_rc2 sys-libs/ncurses virtual/pkgconfig !media-sound/listen !dev-ruby/listen !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Basic AX.25 (Amateur Radio) user tools, additional daemons
 EAPI=5
 HOMEPAGE=http://www.linux-ax25.org
@@ -9,4 +9,4 @@ RDEPEND=>=dev-libs/libax25-0.0.12_rc2 sys-libs/ncurses
 SLOT=0
 SRC_URI=http://www.linux-ax25.org/pub/ax25-apps/ax25-apps-0.0.8-rc4.tar.gz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=9036c0dc2100797577d53e4cacdc9ea0
+_md5_=17cb68c2380569cdc570d2d8bb7b5b1e
