@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=dev-libs/libgcrypt:0= net-misc/curl[ssl] sys-libs/ncurses sys-libs/zlib charset? ( virtual/libiconv ) guile? ( dev-scheme/guile ) lua? ( dev-lang/lua[deprecated] ) nls? ( virtual/libintl ) perl? ( dev-lang/perl ) python? ( python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_single_target_python3_4? ( dev-lang/python:3.4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),python_single_target_python3_3(+)?,python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] ) ruby? ( >=dev-lang/ruby-1.9 ) ssl? ( net-libs/gnutls ) spell? ( app-text/aspell ) tcl? ( >=dev-lang/tcl-8.4.15 ) doc? ( app-text/asciidoc dev-util/source-highlight ) nls? ( >=sys-devel/gettext-0.15 ) test? ( dev-util/cpputest ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=Portable and multi-interface IRC client
+EAPI=5
+HOMEPAGE=http://weechat.org/
+IUSE=doc nls +ssl test linguas_cs linguas_de linguas_es linguas_fr linguas_hu linguas_it linguas_ja linguas_pl linguas_pt_BR linguas_ru linguas_tr guile lua +perl +python ruby tcl +alias +charset +exec +fifo +logger +relay +scripts +spell +trigger +xfer +irc python_targets_python3_3 python_targets_python3_4 python_targets_python2_7 python_single_target_python3_3 python_single_target_python3_4 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-3
+RDEPEND=dev-libs/libgcrypt:0= net-misc/curl[ssl] sys-libs/ncurses sys-libs/zlib charset? ( virtual/libiconv ) guile? ( dev-scheme/guile ) lua? ( dev-lang/lua[deprecated] ) nls? ( virtual/libintl ) perl? ( dev-lang/perl ) python? ( python_single_target_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3 ) python_single_target_python3_4? ( dev-lang/python:3.4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),python_single_target_python3_3(+)?,python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] ) ruby? ( >=dev-lang/ruby-1.9 ) ssl? ( net-libs/gnutls ) spell? ( app-text/aspell ) tcl? ( >=dev-lang/tcl-8.4.15 )
+SLOT=0
+SRC_URI=http://weechat.org/files/src/weechat-1.1.1.tar.bz2
+_eclasses_=cmake-utils	0e29eadbd656185bce30d2449ab48035	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-single-r1	ed2ee20dc74a34be60f5b1b500e92a5b	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=0215350a368129d9649648e8f90b0b41
