@@ -4,21 +4,23 @@ Hash: SHA256
 AUX weechat-0.4.3-always-link-against-pthreads.patch 913 SHA256 673a3bf7a596753697011b262e48e05d79a9d7fa4846fd2ae65589649ee1f0d7 SHA512 2f9c08d2db088644e16ef2584de670030d1576db2cc385bcfeca6be5d559d0597f166721c953fbb4647fd07209b2274691e8351216cb666bc2672ca5d5a87c05 WHIRLPOOL a5b3593dfaa825001c6b3bb9ce81de399845c0375c3e207773e1c840d59a2e7f91268ef1c5332186b2b4e25c6745551ce2f5a8702d573e92267d7c387fe86a88
 DIST weechat-0.4.3.tar.bz2 2089701 SHA256 a8ec847d331a1201de975530a22f1813c260db420c68675b2ecaa7bf3c7c3ff8 SHA512 0d049626e6a5fb44bc368d732c395d7135ad8869d9368cb95487662c4c738c9a44052db6e40a7fa08db9798916de0c466c24531f94993e91b7b19519b1d7cfc2 WHIRLPOOL 1e8f045be496d70c39ffdc63aaa1a4862c68e52549ca378c14e3295de20a9d882c144c1acee49c3dca94db31c0495c39c70087e388f316a9f07beed7e246a58c
 DIST weechat-1.0.1.tar.bz2 2277780 SHA256 b9285ae5124798dee8e3d77cf4ec1e913699b1df1587b5cee6760ed518072ca8 SHA512 e8b38d28db820471bb2a50288545598590eaf9e473fbe98fdaea54a3fd043ee6625f4ec273ab5fc266efcfd01e39e051771ae6e6acebc693d3dd54179be73dea WHIRLPOOL 95206fd64bff598bfa26c8d2b9d41abe5f0825c5b254e5b68ea47ae4301d0a6c5bc693f1e26e6a3bdf11dbbb27af105af0873c39f1b773ce0700c3246534b8b6
+DIST weechat-1.1.1.tar.bz2 2305377 SHA256 810bf0584fd5888246797fc7f1bbc4facb064a4d1c5d91627a9c8c01cbce97b5 SHA512 710cb8badeb2734cbe6430e1c5f7fc91d8ec5c9ef85d2c6cc2206ffdf915fab083027a04d25ba23a17515e767d3b482f85b3b3e8fc445cbf1d05db941ca13dfd WHIRLPOOL d445db9a42e6ac8a58bf17a6a905bc769ea3da005d29f4c8dd703c859ae475dea0302ba471662ae52ff7c4961f35b09942757ccf657d1d419edc50416dde6002
 DIST weechat-1.1.tar.bz2 2305548 SHA256 d06f15d8b945a76fc6b0ecfad358dfe4ae812b6fc998e0e221e8c2f75e3fca2d SHA512 2f7f44092603de5cf3321941599e4629caccf21bb65a6185ce4404abbae37beaa8eb447b328775c2404a1fc5227aea44623edfcdf86fe5927b4a3a1437f3e0b4 WHIRLPOOL 648c8a30875ba786812db6d97735404f3b070d020a0a402c9c04e4e9452515d616a8a1d6b721365f683945ec284bc705973f697c38d92c61baeecf5b6f759bf4
 EBUILD weechat-0.4.3-r1.ebuild 3459 SHA256 1145a1bac3cec775153118a79f62ba3e487d541212d8a8b86c3baf55681fb132 SHA512 656b9402acb9b14d2952478e894601ced96da4bc09f853e5c5fab9918b58a63891576e842f3b9e518dd55a7000f1e776484ef2943971fc2f10becd45cbec7699 WHIRLPOOL 289f0854c744ba21d88faf31a6d40644aab15c3f57a8741de9268fd40abca1484405c30cb2630b9b5e1a19637037df9762cd1f3964a0272507c5b2ae50fec4e4
 EBUILD weechat-1.0.1.ebuild 3365 SHA256 b05a54875790d0698cabd53c35dfa9cbcac5a2aaeb3074d5aa2969dca4bd1b01 SHA512 eb6b352701527dc1a8a99fc7311bce46c8289adeb7bca811f1ee6e9d8650fb0a6473dbc049082a732e4d1b1bc3ac882f1a8bf941d7f76fb3f98c2ac22cba338d WHIRLPOOL 2e92a78fb7f893108d4c485039da6df7ce55790b5ec50f431c6203f2f496e6f8419ed0dbbfb8baa56fe54bfdee07e342caa74d5daedc7f7cbd7c46bdc155252f
+EBUILD weechat-1.1.1.ebuild 3365 SHA256 c2b1035c252847d7d8f85292f34072de13cc6af5e7348fcef2cb9d1fa1235d1b SHA512 743beec391081b8f621fb975ec5af9195c67611c18ad34eaa2e90e88a3a7dacff10bccbbca152bb20c23fffe8f9d2657db856be4cdaa2f837653825790039d5f WHIRLPOOL 173ff22f2fccc9e1b3b248bf3da64e40dfd78bf9a8d49c900bce5bf510d57ceac234afbb6296a6cb8315e99cfc680a71b57aed816453be67ca423f218f145ab7
 EBUILD weechat-1.1.ebuild 3363 SHA256 4e4bad3cbb765ca60801ed12f2c48ae3bddcb6e90af1c887a16fc7a097a93d95 SHA512 b2278aafb32b5dd6b07b96fc78ee78fdb046a588d55a30a721e8d30c6af67c323390992dd8a17a879a7efca084891c783e9dcc1663b07b134c86ded114b16a2f WHIRLPOOL 0b81902ca027dbbef83af49228a85dcaea4c8d362bd178688c249216cf0724c6dfc2803fbf8c0c339b5531b24b54cd1382bc318a560b1f074b0f0c62bacfc7a2
 EBUILD weechat-9999.ebuild 3416 SHA256 08ab525bf88072ef859b8456da49c1c29691ce8da401f4867e664b6733eba1c0 SHA512 d1af9295f1f0927579f3be9db6b15f3f742d1c1618a9f5b744834ba94c2232690d8627aeb0c040d8e99acf1d91bb9e0819d581133717a15d426bc16e54c87187 WHIRLPOOL e573a8087f70bd5bfddc8f6265db93ee8316e8f48364011fd2d355a56aaa5121767278ea2f86793100368f3c2fd5af3ca94df876d5ca3c81cd69360c51cd3ff6
-MISC ChangeLog 20896 SHA256 c3a864fdf87c18c9ec61bc2355388f7f2e9c899b351c63af6b31ef1eb1299750 SHA512 409a77b891cf640a71f896c085b11ec8c035f365bc58cfe5c2db4656658e105c06761aad592b7e34635eba1cb2f9e4de1ba042b635fae5f6cc26b6e164570cfd WHIRLPOOL 7b2d6d1917fb903da02abdb2e8e27846519b9947a5ee0357791d84b6dd5db8118c42af9168a83b4166cc1ad253104100044a5c653613f6d738022e2fbdd6a061
+MISC ChangeLog 21015 SHA256 520066146d6fea83959e3a80dbac134fe8626b18e6fa1f9a64a4e713789ab15b SHA512 822fc26de08da0ad28a57e7b76c53c59a053b2f66f084530ae242529c990094243c1eb6609c8b7b54a9ebee6a83624ddfce4faa27398895b9a4b89da065210df WHIRLPOOL 52e0ebca3e7d0ae5ce56f2b8033d1883242f79157adb2c3746d1d768ab634710957686bbc322ff596df8e00d379497c20ff13413199ba8c8006624aa7f6c2cb7
 MISC metadata.xml 942 SHA256 6ff57da4fb08c6a4416fed9185c979a0f3f03e7c8232141a3822dc15d6662a18 SHA512 2a9f6af7c422322e3c3900e78eb6c612b1bf8a3a111d6d3074ed169904a61e1d038d009e698c767b104a393930f0f93eaf4bc27da1f8f78d1a460067c6d81816 WHIRLPOOL 24ac92d123e15a98bd53a2fe214f693c1b216b752ac8ea3e655dbcf608742b06dba12224d51f2bf99034efdb79a722a8229fd688e467eb83f87a3bce8ccde030
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUssV4AAoJEEqz6FtPBkyjWq0H/jWBGNmXZtzgCPKCMj+Qiek8
-U59aniL62RTl/ibooXzYmwruoKovvUFgxTWS60e0lRieor5mHYOTZRXXP4Sek46O
-dCiO9Rhw2O9uU/k6hRQfm3R/ehEG1yQtKxC4LQkljXZoTSSejEvCPrZyFoYk+UHR
-F1YqbsbO0JLMdMEfyX+/J4J3TqLYmVS0wAMb8xC0H40NVTp4c1J4g0VF5plkiBme
-hRtqkyk4GueB7ipk5HEdXN1SlH8mrCkWlg1+cVIybY6iY1QCoBu5b+CrguQYVReQ
-V+NT0uE3MOCsPuA+erYyKS85K1Ha4bbyGKFKnMbnOdOu48cYI/llpuTHnSTZph0=
-=HxF6
+iQEcBAEBCAAGBQJUxp1fAAoJEEqz6FtPBkyjj5MIAJuIAnPGt7aMGnRBAxIaLYxR
+QkAqlSVcyLd19eWhOKFSUoaostda/oBqXARJcWuiA9+/KtTyaI0gHR4P/LQELWtU
+BKHTWw4vQx42F4Ml/JEA8uZvFjhNOlCH9evbuTYUSVKNMzl7CEBfGzF7A1YYEyMm
+h4XlfTr9CiKWiWt1sYlZaKQf6PdGgVypI6CWzmudb6qtfQMmYSbRmpNxfxv/CC44
+JNnSAKc7b6+ESaMS/3L4GXsB1ClOSUsnSTKyda5K5Ni3+O5pzsKObh85RKHrdlkH
+xL/xl4BqX9hZKAgMCpxyepkNJD5S+UebJh2SF3GmWeQAohNVw7T/bwsw3eT2DkU=
+=b0ie
 -----END PGP SIGNATURE-----
