@@ -1,6 +1,9 @@
 # ChangeLog for media-radio/ax25-apps
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-apps/ChangeLog,v 1.28 2014/12/19 07:27:44 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-radio/ax25-apps/ChangeLog,v 1.29 2015/01/26 20:06:53 tomjbe Exp $
+
+  26 Jan 2015; Thomas Beierlein <tomjbe@gentoo.org> ax25-apps-0.0.8_rc4.ebuild:
+  Add blocker for dev-ruby/listen (bug #537888)
 
   19 Dec 2014; Jeroen Roovers <jer@gentoo.org> ax25-apps-0.0.8_rc4.ebuild,
   files/ax25-apps-0.8.4-tinfo.patch:
